# HCalc

./: CHANGELOG.md  HCalc.cabal  README.org  tests.sh
app/: Main.hs
src/: Converter.hs  Error.hs  Operators.hs  Parser.hs  Queue.hs  Repl.hs  Stack.hs  Token.hs  Tokenizer.hs
test/: test-converter.hs  test-parser.hs  test-tokenizer.hs
