cabal-version:      2.4
name:               HCalc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             NoakPalander
maintainer:         noak.palander@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Tokenizer, Converter

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable HCalc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        HCalc

    hs-source-dirs:   app
    default-language: Haskell2010

Test-Suite Tokenizer
    type:           exitcode-stdio-1.0
    main-is:        test-tokenizer.hs
    build-depends:  HCalc, base ^>=4.14.3.0, hspec
    hs-source-dirs: test
